--- a/TP/TP-Travel-Agency/index.html
+++ b/TP/TP-Travel-Agency/index.html
@@ -84,7 +84,7 @@
                 chacune de vos attentes pour vous aider dans la préparation de votre séjour, circuit ou voyage sur
                 mesure.</p>
 
-            <form>
+            <form action="#" method="GET" onsubmit="return form_validated()">
                 <label for="name">Nom</label>
                 <input type="text" id="name" placeholder="Votre nom">
                 <label for="email">Email</label>
